--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "@tabler/icons-react": "^3.31.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.3",
     "maath": "^0.10.8",
@@ -20,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.22.0",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwind-merge": "^2.6.0",
